# cli-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
notebooks/: pixeltable_funcs.ipynb
src/cli_agent/: cli.py  config.py  utils.py
src/cli_agent/agent/: main_agent.py  memory.py  prompts.py  tools.py
src/cli_agent/agent/mcp_servers/: config.json
tests/: agent_test.py  mcp_test.py
